--- a/app/static/css/ticket.css
+++ b/app/static/css/ticket.css
@@ -25,11 +25,14 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
+    background-color: #4CAF50;
+    border-radius: 10%;
 }
 
 main {
     padding: 20px;
     text-align: center;
+    min-height: calc(100vh - 60px);
 }
 
 footer {
@@ -42,50 +45,31 @@ footer {
     width: 100%;
 }
 
-tbody {
-    background-color: #fff;
-    color: #333;
-}
-
-tr {
-    text-align: center;
-}
-
-table {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 25px;
-    border-collapse: collapse;
-    width: 80%;
-}
-
-th,
-td {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-
-th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #333;
-    color: white;
-}
-
-td:hover {
-    background-color: #a4f376;
-}
-.th_excluir{
-    background-color: #ddd;    
-}
-.butao{
-    padding: 10px 20px;
-    background-color: #000000;
-    color: #fff;
+button {
+    background-color: #4CAF50;
     border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
     cursor: pointer;
 }
-.butao:hover {
-    background-color: #ff0000;
+
+.ticket-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.ticket-details div {
+    width: 50%;
+    padding: 10px;
+}
+
+h1 {
+    text-align: center;
 }
