--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,73 +3,7 @@
 
 <head>
     <title>Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #fff;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        form {
-            width: 400px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            background-color: #fff;
-        }
-
-        form label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        form input[type="text"],
-        form input[type="password"] {
-            width: 90%;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-
-        form input[type="submit"] {
-            padding: 10px 20px;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-
-        }
-
-
-        h1 {
-            text-align: center;
-        }
-        input[type="submit"]:hover, button:hover {
-            background-color: #a4f376;
-        }
-    </style>
+    <link rel="stylesheet" href="/../static/css/login.css">
 </head>
 
 <body>
