--- a/app/templates/newTicket.html
+++ b/app/templates/newTicket.html
@@ -3,108 +3,10 @@
 
 <head>
     <title>Novo Chamado</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        main {
-            padding: 20px;
-            text-align: center;
-            position: relative;
-            /* Adicionado para posicionar o pseudo-elemento relativo ao 'main' */
-        }
-
-        main::after {
-            content: "";
-            display: block;
-            height: 40px;
-            /* altura do rodapé */
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            margin-top: 25px;
-        }
-
-
-        button {
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
-        }
-
-        form input,
-        form select,
-        form textarea {
-            width: 50%;
-            padding: 10px;
-        }
+    <link rel="stylesheet" href="/../static/css/newTicket.css">
+        
     </style>
-    <script>
-        window.onload = function () {
-            var now = new Date();
-            var month = (now.getMonth() + 1);
-            var day = now.getDate();
-            if (month < 10)
-                month = "0" + month;
-            if (day < 10)
-                day = "0" + day;
-            var today = now.getFullYear() + '-' + month + '-' + day;
-            document.getElementById('created_at').value = today;
-
-        }
-
-    </script>
+    
 </head>
 
 <body>
@@ -130,8 +32,6 @@
             <option value="software">Software</option>
             <option value="network">Network</option>
         </select><br>
-        <label for="created_at">Data de Criação : </label><br>
-        <input type="date" id="created_at" name="created_at"><br>
         <label for="created_by">Autor:</label><br>
         <input type="text" id="created_by" name="created_by"><br>
         <label for="deadline">Prazo para solução:</label><br>
@@ -141,6 +41,7 @@
     <footer>
         <p>© 2023 GustavoDesk. All rights reserved.</p>
     </footer>
+    
 </body>
 
 </html>
